@@ -259,26 +259,6 @@ Cubic</property>
 		  <property name="spacing">6</property>
 
 		  <child>
-		    <widget class="GtkCheckButton" id="chkEnableXA">
-		      <property name="visible">True</property>
-		      <property name="tooltip" translatable="yes">Enable or disable XA music.</property>
-		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">Enable XA</property>
-		      <property name="use_underline">True</property>
-		      <property name="relief">GTK_RELIEF_NORMAL</property>
-		      <property name="focus_on_click">True</property>
-		      <property name="active">False</property>
-		      <property name="inconsistent">False</property>
-		      <property name="draw_indicator">True</property>
-		    </widget>
-		    <packing>
-		      <property name="padding">0</property>
-		      <property name="expand">False</property>
-		      <property name="fill">False</property>
-		    </packing>
-		  </child>
-
-		  <child>
 		    <widget class="GtkCheckButton" id="chkXASpeed">
 		      <property name="visible">True</property>
 		      <property name="tooltip" translatable="yes">Choose this if XA music is played too quickly.</property>
