@@ -1,3 +1,13 @@
+October 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Removed the "Enable XA" option
+   as we already has such an option in the main emu.
+ * plugins/dfsound/spucfg-0.1df/main.c: Likewise.
+ * plugins/dfsound/cfg.c: Likewise.
+ * plugins/dfsound/spu.c: Likewise.
+ * plugins/dfsound/externals.h: Likewise.
+ * plugins/dfsound/psemu.c: Likewise.
+
 October 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * gui/Gtk2Gui.c: Disable the "Graphics/Sound/CD-ROM/Controller" menuitems
